// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`computeLayerLayout characterization > matches snapshot with selectedLayer 1`] = `
{
  "edges": [
    {
      "id": "web:routes->services",
      "markerEnd": {
        "color": "#f59e0b",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "routes",
      "sourceHandle": undefined,
      "style": {
        "opacity": 1,
        "stroke": "#f59e0b",
        "strokeWidth": 2,
      },
      "target": "services",
      "targetHandle": "top-web",
      "type": "default",
    },
    {
      "id": "web:services->data",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "services",
      "sourceHandle": "bottom-web",
      "style": {
        "opacity": 0.15,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "data",
      "targetHandle": undefined,
      "type": "default",
    },
    {
      "id": "api:controllers->services",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "controllers",
      "sourceHandle": undefined,
      "style": {
        "opacity": 0.15,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "services",
      "targetHandle": "top-api",
      "type": "default",
    },
    {
      "id": "api:services->db",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "services",
      "sourceHandle": "bottom-api",
      "style": {
        "opacity": 0.15,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "db",
      "targetHandle": undefined,
      "type": "default",
    },
  ],
  "nodes": [
    {
      "data": {
        "description": undefined,
        "isDimmed": false,
        "label": "web",
        "stackName": "web",
      },
      "height": 30,
      "id": "header-web",
      "position": {
        "x": 0,
        "y": 0,
      },
      "type": "stackHeader",
      "width": 160,
    },
    {
      "data": {
        "description": undefined,
        "isDimmed": true,
        "label": "api",
        "stackName": "api",
      },
      "height": 30,
      "id": "header-api",
      "position": {
        "x": 300,
        "y": 0,
      },
      "type": "stackHeader",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": true,
        "isHovered": false,
        "isSelected": true,
        "isShared": false,
        "label": "routes",
        "layerName": "routes",
        "nodeWidth": undefined,
        "paths": [
          "src/routes",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "routes",
      "position": {
        "x": 0,
        "y": 46,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": true,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "data",
        "layerName": "data",
        "nodeWidth": undefined,
        "paths": [
          "src/data",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "data",
      "position": {
        "x": 0,
        "y": 246,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": true,
        "isEntry": true,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "controllers",
        "layerName": "controllers",
        "nodeWidth": undefined,
        "paths": [
          "src/controllers",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "controllers",
      "position": {
        "x": 300,
        "y": 46,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": true,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "db",
        "layerName": "db",
        "nodeWidth": undefined,
        "paths": [
          "src/db",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "db",
      "position": {
        "x": 300,
        "y": 246,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": "outgoing",
        "description": undefined,
        "handleOffsets": [
          {
            "offsetPct": 17.391304347826086,
            "stackName": "web",
          },
          {
            "offsetPct": 82.6086956521739,
            "stackName": "api",
          },
        ],
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": true,
        "label": "services",
        "layerName": "services",
        "nodeWidth": 460,
        "paths": [
          "src/services",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "services",
      "position": {
        "x": 0,
        "y": 146,
      },
      "type": "layer",
      "width": 460,
    },
  ],
}
`;

exports[`computeLayerLayout characterization > matches snapshot with summary 1`] = `
{
  "edges": [
    {
      "id": "web:routes->services",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "routes",
      "sourceHandle": undefined,
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "services",
      "targetHandle": "top-web",
      "type": "default",
    },
    {
      "id": "web:services->data",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "services",
      "sourceHandle": "bottom-web",
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "data",
      "targetHandle": undefined,
      "type": "default",
    },
    {
      "id": "api:controllers->services",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "controllers",
      "sourceHandle": undefined,
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "services",
      "targetHandle": "top-api",
      "type": "default",
    },
    {
      "id": "api:services->db",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "services",
      "sourceHandle": "bottom-api",
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "db",
      "targetHandle": undefined,
      "type": "default",
    },
  ],
  "nodes": [
    {
      "data": {
        "description": undefined,
        "isDimmed": false,
        "label": "web",
        "stackName": "web",
      },
      "height": 30,
      "id": "header-web",
      "position": {
        "x": 0,
        "y": 0,
      },
      "type": "stackHeader",
      "width": 160,
    },
    {
      "data": {
        "description": undefined,
        "isDimmed": false,
        "label": "api",
        "stackName": "api",
      },
      "height": 30,
      "id": "header-api",
      "position": {
        "x": 300,
        "y": 0,
      },
      "type": "stackHeader",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": true,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "routes",
        "layerName": "routes",
        "nodeWidth": undefined,
        "paths": [
          "src/routes",
        ],
        "violationCount": 1,
      },
      "height": 40,
      "id": "routes",
      "position": {
        "x": 0,
        "y": 46,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "data",
        "layerName": "data",
        "nodeWidth": undefined,
        "paths": [
          "src/data",
        ],
        "violationCount": 1,
      },
      "height": 40,
      "id": "data",
      "position": {
        "x": 0,
        "y": 246,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": true,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "controllers",
        "layerName": "controllers",
        "nodeWidth": undefined,
        "paths": [
          "src/controllers",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "controllers",
      "position": {
        "x": 300,
        "y": 46,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "db",
        "layerName": "db",
        "nodeWidth": undefined,
        "paths": [
          "src/db",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "db",
      "position": {
        "x": 300,
        "y": 246,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": [
          {
            "offsetPct": 17.391304347826086,
            "stackName": "web",
          },
          {
            "offsetPct": 82.6086956521739,
            "stackName": "api",
          },
        ],
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": true,
        "label": "services",
        "layerName": "services",
        "nodeWidth": 460,
        "paths": [
          "src/services",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "services",
      "position": {
        "x": 0,
        "y": 146,
      },
      "type": "layer",
      "width": 460,
    },
  ],
}
`;

exports[`computeLayerLayout characterization > matches snapshot without summary or selection 1`] = `
{
  "edges": [
    {
      "id": "web:routes->services",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "routes",
      "sourceHandle": undefined,
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "services",
      "targetHandle": "top-web",
      "type": "default",
    },
    {
      "id": "web:services->data",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "services",
      "sourceHandle": "bottom-web",
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "data",
      "targetHandle": undefined,
      "type": "default",
    },
    {
      "id": "api:controllers->services",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "controllers",
      "sourceHandle": undefined,
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "services",
      "targetHandle": "top-api",
      "type": "default",
    },
    {
      "id": "api:services->db",
      "markerEnd": {
        "color": "#94a3b8",
        "height": 14,
        "type": "arrowclosed",
        "width": 14,
      },
      "source": "services",
      "sourceHandle": "bottom-api",
      "style": {
        "opacity": 1,
        "stroke": "#94a3b8",
        "strokeWidth": 1.5,
      },
      "target": "db",
      "targetHandle": undefined,
      "type": "default",
    },
  ],
  "nodes": [
    {
      "data": {
        "description": undefined,
        "isDimmed": false,
        "label": "web",
        "stackName": "web",
      },
      "height": 30,
      "id": "header-web",
      "position": {
        "x": 0,
        "y": 0,
      },
      "type": "stackHeader",
      "width": 160,
    },
    {
      "data": {
        "description": undefined,
        "isDimmed": false,
        "label": "api",
        "stackName": "api",
      },
      "height": 30,
      "id": "header-api",
      "position": {
        "x": 300,
        "y": 0,
      },
      "type": "stackHeader",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": true,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "routes",
        "layerName": "routes",
        "nodeWidth": undefined,
        "paths": [
          "src/routes",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "routes",
      "position": {
        "x": 0,
        "y": 46,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "data",
        "layerName": "data",
        "nodeWidth": undefined,
        "paths": [
          "src/data",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "data",
      "position": {
        "x": 0,
        "y": 246,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": true,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "controllers",
        "layerName": "controllers",
        "nodeWidth": undefined,
        "paths": [
          "src/controllers",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "controllers",
      "position": {
        "x": 300,
        "y": 46,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": undefined,
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": false,
        "label": "db",
        "layerName": "db",
        "nodeWidth": undefined,
        "paths": [
          "src/db",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "db",
      "position": {
        "x": 300,
        "y": 246,
      },
      "type": "layer",
      "width": 160,
    },
    {
      "data": {
        "connectedDirection": null,
        "description": undefined,
        "handleOffsets": [
          {
            "offsetPct": 17.391304347826086,
            "stackName": "web",
          },
          {
            "offsetPct": 82.6086956521739,
            "stackName": "api",
          },
        ],
        "isDimmed": false,
        "isEntry": false,
        "isHovered": false,
        "isSelected": false,
        "isShared": true,
        "label": "services",
        "layerName": "services",
        "nodeWidth": 460,
        "paths": [
          "src/services",
        ],
        "violationCount": 0,
      },
      "height": 40,
      "id": "services",
      "position": {
        "x": 0,
        "y": 146,
      },
      "type": "layer",
      "width": 460,
    },
  ],
}
`;
